--- a/index.html
+++ b/index.html
@@ -13,4 +13,11 @@ title: Homepage
 				A design focused front-end web development template using SASS and Jekyll.
 			</p>
 		</div>
+		
+		<script>
+			$(document).ready(function(){
+				var data = $.getJSON("http://test1-backend.herokuapp.com/data.json");
+				console.log(data);
+				});
+		</script>
 	</div>
